--- a/src/styles/Popup.css
+++ b/src/styles/Popup.css
@@ -2,12 +2,45 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+    --glow-color: rgba(128, 0, 128, 1); /* Default glow color for animation */
+    --glow-color-origin: rgba(128, 0, 128, 0.4); /* Glow color for hover */
+    --hover-glow-color: rgb(231, 108, 0); /* Glow color for hover */
+}
+
 .popup-container {
     position: fixed;
-    top: 20px;
+    bottom: 20px;
     right: 20px;
     z-index: 1000;
 }
+
+@keyframes glow {
+    from {
+        box-shadow: 0 0 10px var(--glow-color-origin);
+    }
+    to {
+        box-shadow: 0 0 20px var(--glow-color);
+    }
+}
+
+/* @keyframes bounceIn {
+    0%, 20%, 40%, 60%, 80%, 100% {
+        transform: translateY(0);
+    }
+    20% {
+        transform: translateY(-20px);
+    }
+    40% {
+        transform: translateY(-10px);
+    }
+    60% {
+        transform: translateY(-5px);
+    }
+    80% {
+        transform: translateY(-2px);
+    }
+} */
 
 .popup {
     background-color: white;
@@ -17,16 +50,22 @@
     padding: 16px;
     position: relative;
     width: 300px;
-    animation: bounceIn 1s, glow 1.5s infinite alternate;
+    animation: glow 1.5s infinite alternate;
+    /* animation: bounceIn 1s; */
+    transition: box-shadow 0.3s ease-in-out;
+    animation-fill-mode: forwards; /* Keep the final state of bounce */
 }
 
-@keyframes glow {
-    from {
-        box-shadow: 0 0 10px rgba(128, 0, 128, 0.4);
-    }
-    to {
-        box-shadow: 0 0 20px rgba(128, 0, 128, 1);
-    }
+.popup-glow {
+    animation: glow 1.5s infinite alternate;
+    transition: box-shadow 0.3s ease-in-out;
+}
+
+.popup:hover {
+    /* Stop the glow animation */
+    transition: box-shadow 0.3s ease-in-out;
+    box-shadow: 0 0 30px var(--hover-glow-color); /* Apply glow on hover */
+    
 }
 
 .close-button {
@@ -52,4 +91,8 @@
 
 .popup-options input {
     margin-right: 5px;
+}
+
+.popup:close{
+    animation: bounceOut 1s;
 }
